# cs50-final-project

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
assets/: hash_url.mov
backend/: Cargo.toml  Dockerfile  Makefile  docker-compose.yml  postgres.dump
backend/configuration/: development.yml
backend/migration/: Cargo.toml
backend/migration/src/: m20240811_135448_create_request_record_table.rs  m20240811_211240_create_user_table.rs  m20240929_162727_url_table_add_is_delete.rs
backend/src/: configuration.rs  doc.rs  error.rs  main.rs  telemetry.rs
backend/src/application/: mod.rs
backend/src/domain/: mod.rs
backend/src/entity/: prelude.rs  urls.rs  users.rs
backend/src/handlers/url/: mod.rs  url_delete.rs  url_hash.rs  url_redirect.rs
backend/src/handlers/user/: mod.rs  user_info.rs  user_login.rs  user_urls.rs
backend/src/utility/: jwt_handler.rs  mod.rs
backend/tests/: hash.rs  user.rs
frontend/: Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml
frontend/src/lib/: utils.ts
frontend/src/lib/constant/: api.ts  cookie.ts  index.ts
frontend/src/lib/request/: core.ts  index.ts  interceptor.ts
frontend/src/lib/store/: user.ts
frontend/src/lib/type/: api.ts  index.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  schema.ts
frontend/src/routes/account/: +page.server.ts  +page.svelte
frontend/src/routes/login/: +page.server.ts  (+1 more)
migration/src/: lib.rs  m20240811_211240_create_user_table.rs  m20240811_211811_create_url_table.rs  m20240822_165120_request_record_table_rename_column.rs  tables.rs
src/: configuration.rs  doc.rs  error.rs  http.rs  lib.rs  main.rs
src/application/: mod.rs
src/domain/: url.rs  user.rs
src/entity/: mod.rs  request_records.rs  urls.rs  users.rs
src/handlers/: hash_url.rs  mod.rs  redirect_hash_url.rs  user_login.rs  user_register.rs
src/handlers/url/: hash_url.rs  mod.rs  redirect_hash_url.rs  url_delete.rs  url_hash.rs
src/handlers/user/: mod.rs  user_info.rs  user_login.rs  user_register.rs
src/utility/: jwt_handler.rs
tests/: hash.rs  integration_test.rs  user.rs
tests/common/: mod.rs
(+10 files in other folders)
