[package]
name = "shor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
base62 = "2.0.2"
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = "0.7.11"
tower = { version = "0.4.13", features = ["util"] }  
uuid = { version = "1.10.0", features = ["v4"] }
validator = { version ="0.18.1", features = ["derive"] }
