[package]
name = "shor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
base62 = "2.0.2"
chrono = "0.4.38"
config = "0.14.0"
jsonwebtoken = "9.3.0"
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
secrecy = "0.8.0"
serde = { version = "1.0.204", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.125"
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = "0.7.11"
tower = { version = "0.4.13", features = ["util"] }  
tower-http = { version = "0.5.2", features = ["add-extension"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
uuid = { version = "1.10.0", features = ["v4"] }
validator = { version ="0.18.1", features = ["derive"] }
